[gd_scene load_steps=3 format=1]

[ext_resource path="res://assets/pc/PCScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/art/texture/menu/Screen.tex" type="Texture" id=2]

[node name="PCScreen" type="Control"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1023.0
margin/bottom = 594.0
script/script = ExtResource( 1 )

[node name="Panel" type="TextureFrame" parent="."]

visibility/behind_parent = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1023.0
margin/bottom = 600.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 0

[node name="btnEnter" type="Button" parent="Panel"]

hint/tooltip = "Exits the computer."
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 925.0
margin/top = 546.0
margin/right = 975.0
margin/bottom = 576.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Exit"
flat = false

[node name="btnClear" type="Button" parent="Panel"]

hint/tooltip = "Clears all the code from the editor."
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 482.0
margin/top = 491.0
margin/right = 538.0
margin/bottom = 515.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Clear"
flat = false

[node name="Editor" type="TextEdit" parent="Panel"]

rect/scale = Vector2( 0.9, 0.9 )
hint/tooltip = "Editor"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 45.0
margin/top = 32.0
margin/right = 523.0
margin/bottom = 566.0
syntax_highlighting = true
show_line_numbers = true
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = true
caret/caret_blink_speed = 1.0

[node name="btnBuild" type="Button" parent="Panel"]

hint/tooltip = "Build allows you to check your code for errors."
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 482.0
margin/top = 457.0
margin/right = 538.0
margin/bottom = 481.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Build"
flat = false

[node name="Debug" type="TextEdit" parent="Panel"]

rect/scale = Vector2( 0.9, 0.9 )
hint/tooltip = "Debug-information"
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 45.0
margin/top = 518.0
margin/right = 523.0
margin/bottom = 585.0
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
caret/block_caret = false
caret/caret_blink = false
caret/caret_blink_speed = 0.65

[node name="btnHelpGroup" type="GridContainer" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 518.0
margin/top = 22.0
margin/right = 989.0
margin/bottom = 444.0
columns = 4

[node name="AcceptDialog" type="AcceptDialog" parent="Panel"]

visibility/visible = false
rect/scale = Vector2( 0.9, 0.9 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 386.0
margin/top = 246.0
margin/right = 543.0
margin/bottom = 304.0
popup/exclusive = false
window/title = "Information"
dialog/hide_on_ok = true

[connection signal="pressed" from="Panel/btnEnter" to="." method="_on_btnEnter_pressed"]

[connection signal="pressed" from="Panel/btnClear" to="." method="_on_btnClear_pressed"]

[connection signal="pressed" from="Panel/btnBuild" to="." method="_on_btnBuild_pressed"]


